Removed header-links class from style.css. Made ul element display: flex and added 8px gap. Now links in header display correctly. Also added align-items: center to header class.

--- a/style.css
+++ b/style.css
@@ -15,21 +15,21 @@ body {
     color: white;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .header-logo {
     padding: 8px;
     font-weight: 900;
-}
-
-.header-links {
-    display: flex;
+    font-size: 24px;
 }
 
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    gap: 8px;
 }
 
 a {
